test: GetAllProblems 성공하라